@@ -1828,6 +1828,7 @@ MyTorrentsView.AvgAvail=Avg Avail/piece
 
 ConfigView.label.strictfilelocking=Enforce exclusive file write access locking across torrents
 MyTorrentsView.menu.rescanfile=Periodically Recheck Incomplete Pieces
+MyTorrentsView.menu.clear_resume_data=Clear Resume Data
 Plugin.extseed.name=External Seeds
 Plugin.localtracker.name=LAN Peer Finder
 Plugin.localtracker.info=The LAN peer finder permits multiple copies of Azureus behind a firewall and on a common network\nto efficiently download torrents by enabling direct connections between them
